# nodis

./: LICENSE.md  README.md
nodis_cpp/: CMakeLists.txt
nodis_cpp/include/nodis_cpp/: core.h  message.h  message_in.h  publisher_in.h  registration.h  subscriber_in.h
nodis_cpp/src/: main.cpp
nodis_cpp/test/: core_pub_sub_test.cpp
